@@ -18,6 +18,7 @@
  */
 package org.apache.fineract.integrationtests.variableinstallments;
 
+import com.google.gson.Gson;
 import java.text.DateFormat;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
@@ -26,18 +27,20 @@ import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-
 import org.apache.fineract.integrationtests.common.accounting.Account;
 import org.apache.fineract.integrationtests.common.loans.LoanApplicationTestBuilder;
 import org.apache.fineract.integrationtests.common.loans.LoanProductTestBuilder;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
-import com.google.gson.Gson;
-
-@SuppressWarnings({"rawtypes", "unchecked"})
+@SuppressWarnings({ "rawtypes", "unchecked" })
 public class VariableInstallmentsDecliningBalanceHelper {
 
-    public static String createLoanProductWithoutVaribleConfig(final boolean multiDisburseLoan, final String accountingRule, final Account... accounts) {
-        System.out.println("------------------------------CREATING NEW LOAN PRODUCT ---------------------------------------");
+    private static final Logger LOG = LoggerFactory.getLogger(VariableInstallmentsDecliningBalanceHelper.class);
+
+    public static String createLoanProductWithoutVaribleConfig(final boolean multiDisburseLoan, final String accountingRule,
+            final Account... accounts) {
+        LOG.info("------------------------------CREATING NEW LOAN PRODUCT ---------------------------------------");
         final String loanProductJSON = new LoanProductTestBuilder() //
                 .withPrincipal("1,00,000.00") //
                 .withNumberOfRepayments("4") //
@@ -49,11 +52,12 @@ public class VariableInstallmentsDecliningBalanceHelper {
                 .withInterestTypeAsDecliningBalance() //
                 .withTranches(multiDisburseLoan) //
                 .withAccounting(accountingRule, accounts).build(null);
-       return loanProductJSON ;
+        return loanProductJSON;
     }
-    
-    public static String createLoanProductWithVaribleConfig(final boolean multiDisburseLoan, final String accountingRule, final Account... accounts) {
-        System.out.println("------------------------------CREATING NEW LOAN PRODUCT ---------------------------------------");
+
+    public static String createLoanProductWithVaribleConfig(final boolean multiDisburseLoan, final String accountingRule,
+            final Account... accounts) {
+        LOG.info("------------------------------CREATING NEW LOAN PRODUCT ---------------------------------------");
         final String loanProductJSON = new LoanProductTestBuilder() //
                 .withPrincipal("1,00,000.00") //
                 .withNumberOfRepayments("4") //
@@ -65,13 +69,14 @@ public class VariableInstallmentsDecliningBalanceHelper {
                 .withInterestTypeAsDecliningBalance() //
                 .withTranches(multiDisburseLoan) //
                 .withInterestCalculationPeriodTypeAsRepaymentPeriod(true)//
-                .withVariableInstallmentsConfig(Boolean.TRUE, new Integer(5), new Integer(90))//
+                .withVariableInstallmentsConfig(Boolean.TRUE, Integer.valueOf(5), Integer.valueOf(90))//
                 .withAccounting(accountingRule, accounts).build(null);
-        return loanProductJSON ;
+        return loanProductJSON;
     }
-    
-    public static String createLoanProductWithVaribleConfigwithEqualPrincipal(final boolean multiDisburseLoan, final String accountingRule, final Account... accounts) {
-        System.out.println("------------------------------CREATING NEW LOAN PRODUCT ---------------------------------------");
+
+    public static String createLoanProductWithVaribleConfigwithEqualPrincipal(final boolean multiDisburseLoan, final String accountingRule,
+            final Account... accounts) {
+        LOG.info("------------------------------CREATING NEW LOAN PRODUCT ---------------------------------------");
         final String loanProductJSON = new LoanProductTestBuilder() //
                 .withPrincipal("1,00,000.00") //
                 .withNumberOfRepayments("4") //
@@ -83,14 +88,14 @@ public class VariableInstallmentsDecliningBalanceHelper {
                 .withInterestTypeAsDecliningBalance() //
                 .withTranches(multiDisburseLoan) //
                 .withInterestCalculationPeriodTypeAsRepaymentPeriod(true)//
-                .withVariableInstallmentsConfig(Boolean.TRUE, new Integer(5), new Integer(90))//
+                .withVariableInstallmentsConfig(Boolean.TRUE, Integer.valueOf(5), Integer.valueOf(90))//
                 .withAccounting(accountingRule, accounts).build(null);
-        return loanProductJSON ;
+        return loanProductJSON;
     }
-    
+
     public static String applyForLoanApplication(final Integer clientID, final Integer loanProductID, List<HashMap> charges,
             final String savingsId, String principal) {
-        System.out.println("--------------------------------APPLYING FOR LOAN APPLICATION--------------------------------");
+        LOG.info("--------------------------------APPLYING FOR LOAN APPLICATION--------------------------------");
         final String loanApplicationJSON = new LoanApplicationTestBuilder() //
                 .withPrincipal(principal) //
                 .withLoanTermFrequency("4") //
@@ -105,12 +110,12 @@ public class VariableInstallmentsDecliningBalanceHelper {
                 .withExpectedDisbursementDate("20 September 2011") //
                 .withSubmittedOnDate("20 September 2011") //
                 .withCharges(charges).build(clientID.toString(), loanProductID.toString(), savingsId);
-        return loanApplicationJSON ;
+        return loanApplicationJSON;
     }
-    
-    public static String applyForLoanApplicationWithEqualPrincipal(final Integer clientID, final Integer loanProductID, List<HashMap> charges,
-            final String savingsId, String principal) {
-        System.out.println("--------------------------------APPLYING FOR LOAN APPLICATION--------------------------------");
+
+    public static String applyForLoanApplicationWithEqualPrincipal(final Integer clientID, final Integer loanProductID,
+            List<HashMap> charges, final String savingsId, String principal) {
+        LOG.info("--------------------------------APPLYING FOR LOAN APPLICATION--------------------------------");
         final String loanApplicationJSON = new LoanApplicationTestBuilder() //
                 .withPrincipal(principal) //
                 .withLoanTermFrequency("4") //
@@ -125,9 +130,9 @@ public class VariableInstallmentsDecliningBalanceHelper {
                 .withExpectedDisbursementDate("20 September 2011") //
                 .withSubmittedOnDate("20 September 2011") //
                 .withCharges(charges).build(clientID.toString(), loanProductID.toString(), savingsId);
-        return loanApplicationJSON ;
+        return loanApplicationJSON;
     }
-    
+
     public static String createDeleteVariations(ArrayList<Map> deletedInstallments) {
         Map<String, Object> toReturn = new HashMap<>();
         toReturn.put("locale", "en");
@@ -180,7 +185,7 @@ public class VariableInstallmentsDecliningBalanceHelper {
         String json = new Gson().toJson(toReturn);
         return json;
     }
-    
+
     private static ArrayList createNewInstallments(String date) {
         ArrayList toReturn = new ArrayList<>();
         Map tosend = new HashMap();
@@ -189,17 +194,17 @@ public class VariableInstallmentsDecliningBalanceHelper {
         toReturn.add(tosend);
         return toReturn;
     }
-    
+
     private static ArrayList createModifyMap(Map firstSchedule) {
         ArrayList toReturn = new ArrayList<>();
         ArrayList dueDate = (ArrayList) firstSchedule.get("dueDate");
         Map tosend = new HashMap();
         tosend.put("dueDate", formatDate(dueDate));
-        tosend.put("installmentAmount", 30000) ;
+        tosend.put("installmentAmount", 30000);
         toReturn.add(tosend);
         return toReturn;
     }
-    
+
     public static String createAllVariations() {
         Map<String, Object> toReturn = new HashMap<>();
         toReturn.put("locale", "en");
@@ -212,7 +217,7 @@ public class VariableInstallmentsDecliningBalanceHelper {
         String json = new Gson().toJson(toReturn);
         return json;
     }
-    
+
     public static String createAllVariationsWithEqualPrincipal() {
         Map<String, Object> toReturn = new HashMap<>();
         toReturn.put("locale", "en");
@@ -225,7 +230,7 @@ public class VariableInstallmentsDecliningBalanceHelper {
         String json = new Gson().toJson(toReturn);
         return json;
     }
-    
+
     private static ArrayList createNewInstallmentsWithPrincipal(String date) {
         ArrayList toReturn = new ArrayList<>();
         Map tosend = new HashMap();
@@ -234,15 +239,16 @@ public class VariableInstallmentsDecliningBalanceHelper {
         toReturn.add(tosend);
         return toReturn;
     }
-    
+
     private static ArrayList createModifyMapWithPrinciapl(String date) {
         ArrayList toReturn = new ArrayList<>();
         Map tosend = new HashMap();
         tosend.put("dueDate", date);
-        tosend.put("principal", 30000) ;
+        tosend.put("principal", 30000);
         toReturn.add(tosend);
         return toReturn;
     }
+
     private static ArrayList createDeletedMap(String date) {
         ArrayList toReturn = new ArrayList<>();
         Map tosend = new HashMap();
@@ -250,16 +256,16 @@ public class VariableInstallmentsDecliningBalanceHelper {
         toReturn.add(tosend);
         return toReturn;
     }
-    
+
     private static ArrayList createModifyMap(String date) {
         ArrayList toReturn = new ArrayList<>();
         Map tosend = new HashMap();
         tosend.put("dueDate", date);
-        tosend.put("installmentAmount", 30000) ;
+        tosend.put("installmentAmount", 30000);
         toReturn.add(tosend);
         return toReturn;
     }
-    
+
     public static String createModifiyDateVariations(String[] date, String[] newdate, String[] principal) {
         Map<String, Object> toReturn = new HashMap<>();
         toReturn.put("locale", "en");
@@ -270,27 +276,28 @@ public class VariableInstallmentsDecliningBalanceHelper {
         String json = new Gson().toJson(toReturn);
         return json;
     }
-    
+
     private static ArrayList createDateModifyMap(String[] date, String[] newdate, String[] installments) {
         ArrayList toReturn = new ArrayList<>();
-        for(int i = 0 ; i < date.length; i++) {
+        for (int i = 0; i < date.length; i++) {
             Map tosend = new HashMap();
             tosend.put("dueDate", date[i]);
-            tosend.put("modifiedDueDate", newdate[i]) ;
-            if(i < installments.length) {
-                tosend.put("installmentAmount", installments[i]) ;
+            tosend.put("modifiedDueDate", newdate[i]);
+            if (i < installments.length) {
+                tosend.put("installmentAmount", installments[i]);
             }
-            toReturn.add(tosend);    
+            toReturn.add(tosend);
         }
         return toReturn;
     }
+
     public static String formatDate(ArrayList list) {
         Calendar cal = Calendar.getInstance();
         cal.set(Calendar.YEAR, (int) list.get(0));
         cal.set(Calendar.MONTH, (int) list.get(1) - 1);
         cal.set(Calendar.DAY_OF_MONTH, (int) list.get(2));
         Date date = cal.getTime();
-        DateFormat requiredFormat = new SimpleDateFormat("dd MMMM YYYY");
+        DateFormat requiredFormat = new SimpleDateFormat("dd MMMM yyyy");
         return requiredFormat.format(date);
     }
 
